# halfsize_sse_benchmark

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
